# magpie

./: .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  DOCUMENTATION.md  DOCUMENTATION_QUICKSTART.md  GPU_INTEROP_SPEC.md  INTEROP.md  INVESTIGATION_FFI_PANIC.md  LICENSE  PLAN.md  README.md  SKILL.md  SPEC.md  SPEC_GPU_UPGRADE.md
benchmarks/: .gitignore  benchmark.mp  benchmark.rs  benchmark.ts  count_tokens.py  run_benchmark.sh
crates/magpie_arc/: Cargo.toml
crates/magpie_arc/src/: lib.rs
crates/magpie_ast/: Cargo.toml
crates/magpie_ast/src/: lib.rs
crates/magpie_cli/: Cargo.toml
crates/magpie_cli/src/: main.rs
crates/magpie_codegen_llvm/: Cargo.toml
crates/magpie_codegen_llvm/src/: lib.rs
crates/magpie_codegen_wasm/: Cargo.toml
crates/magpie_codegen_wasm/src/: lib.rs
crates/magpie_csnf/: Cargo.toml
crates/magpie_csnf/src/: lib.rs
crates/magpie_ctx/: Cargo.toml
crates/magpie_ctx/src/: lib.rs
crates/magpie_diag/: Cargo.toml
crates/magpie_diag/src/: lib.rs
crates/magpie_driver/: Cargo.toml
crates/magpie_driver/src/: lib.rs
crates/magpie_gpu/: Cargo.toml
crates/magpie_gpu/src/: lib.rs  structurize.rs
crates/magpie_gpu_hip/: Cargo.toml
crates/magpie_gpu_hip/src/: lib.rs
crates/magpie_gpu_msl/: Cargo.toml
crates/magpie_gpu_msl/src/: lib.rs
crates/magpie_gpu_ptx/: Cargo.toml
crates/magpie_gpu_ptx/src/: lib.rs
crates/magpie_gpu_spirv/: Cargo.toml
crates/magpie_gpu_spirv/src/: lib.rs
crates/magpie_gpu_wgsl/: Cargo.toml
crates/magpie_gpu_wgsl/src/: lib.rs
crates/magpie_hir/: Cargo.toml
crates/magpie_hir/src/: lib.rs
crates/magpie_jit/: Cargo.toml
crates/magpie_jit/src/: lib.rs
crates/magpie_lex/: Cargo.toml
crates/magpie_lex/src/: lib.rs
crates/magpie_memory/: Cargo.toml
crates/magpie_memory/src/: lib.rs
crates/magpie_mlx/: Cargo.toml
crates/magpie_mlx/src/: lib.rs
crates/magpie_mono/: Cargo.toml
crates/magpie_mono/src/: lib.rs
crates/magpie_mpir/: Cargo.toml
crates/magpie_mpir/src/: lib.rs
crates/magpie_own/: Cargo.toml
crates/magpie_own/src/: lib.rs
crates/magpie_parse/: Cargo.toml
crates/magpie_parse/src/: lib.rs
crates/magpie_parse/src/snapshots/: magpie_parse__tests__snapshot_arithmetic_parser_output.snap  magpie_parse__tests__snapshot_hello_parser_output.snap
crates/magpie_pkg/: Cargo.toml
crates/magpie_pkg/src/: lib.rs
crates/magpie_rt/: Cargo.toml
crates/magpie_rt/include/: magpie_rt.h
crates/magpie_rt/src/: lib.rs
crates/magpie_sema/: Cargo.toml
crates/magpie_sema/src/: lib.rs
crates/magpie_types/: Cargo.toml
crates/magpie_types/src/: lib.rs
crates/magpie_web/: Cargo.toml
crates/magpie_web/src/: lib.rs
std/std.async/: async.mp
std/std.core/: core.mp
std/std.hash/: hash.mp
std/std.io/: io.mp
std/std.math/: math.mp
std/std.os/: os.mp
std/std.sync/: sync.mp
std/std.test/: test.mp
tests/: gpu_feature_matrix_test.rs  integration_test.rs
tests/fixtures/: arithmetic.mp  async_fn.mp  collections.mp  enum_match.mp  feature_harness.mp  hello.mp  ownership.mp  tresult_parse_json.mp  try_error.mp
