[package]
name = "magpie_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magpie"
path = "src/main.rs"

[dependencies]
magpie_driver = { path = "../magpie_driver" }
magpie_diag = { path = "../magpie_diag" }
magpie_jit = { path = "../magpie_jit" }
magpie_web = { path = "../magpie_web" }
magpie_pkg = { path = "../magpie_pkg" }
magpie_memory = { path = "../magpie_memory" }
magpie_ctx = { path = "../magpie_ctx" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
