[package]
name = "magpie_web"
version.workspace = true
edition.workspace = true

[dependencies]
magpie_types = { path = "../magpie_types" }
magpie_diag = { path = "../magpie_diag" }
magpie_driver = { path = "../magpie_driver" }
magpie_jit = { path = "../magpie_jit" }
magpie_pkg = { path = "../magpie_pkg" }
magpie_memory = { path = "../magpie_memory" }
magpie_ctx = { path = "../magpie_ctx" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
